# SMART

./: CMakeLists.txt  INSTALL  Makefile  README.md  pre-install.sh
data/: 1000.fasta  10000.fasta  100000.fasta  1000000.fasta  2000.fasta  20000.fasta  200000.fasta  2000000.fasta  4000000.fasta  5000.fasta  50000.fasta  500000.fasta  fulgidus.fasta  trachomatis.fasta
ext/libdivsufsort/: CMakeLists.txt  Makefile  cmake_install.cmake
ext/libdivsufsort/CMakeModules/: cmake_uninstall.cmake
ext/libdivsufsort/include/: Makefile  cmake_install.cmake
ext/libdivsufsort/lib/: Makefile  cmake_install.cmake
ext/libdivsufsort/pkgconfig/: Makefile  cmake_install.cmake  libdivsufsort.pc  libdivsufsort64.pc
src/: AppConfig.cpp  AppConfig.hpp  ExactLCPk.cpp  ExactLCPk.hpp  ReadsDB.cpp  ReadsDB.hpp  compute_klcp.cpp  compute_klcp.hpp  defs.hpp  main.cpp  matrices.cpp  sa.cpp  sa.hpp  utils.hpp
src/sdsl/: COPYING  bits.cpp  bits.hpp  construct_sa.cpp  construct_sa.hpp  rmq_support.hpp  rmq_support_sparse_table.hpp
